--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:
 keywords:
 author: Sam Chang
 language: zh-tw
-timezone: Asia/Taipei
+timezone: 
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
