--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:
 keywords:
 author: Sam Chang
 language: zh-tw
-timezone: 
+timezone: Asia/Taipei
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: jekyll-theme-hacker
+theme: jekyll-theme-type
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
